# internal/controller/http/v1/router.go
@@ -50,5 +50,6 @@ func NewRouter(handler *gin.Engine, l logger.Interface, s *usecase.Services, cas
 		newUserRoutes(h, s.User, l, casbinEnforcer, rd)
 		newSpecialtyRoutes(h, s.Specialty, l, casbinEnforcer, rd)
 		newQualificationRoutes(h, s.Qualification, l, casbinEnforcer, rd)
+		newDisciplineRoutes(h, s.Discipline, l, casbinEnforcer, rd)
 	}
 }
